фикс кривого цвета